--- a/tsconfig.json
+++ b/tsconfig.json
@@ -59,9 +59,7 @@
       // "experimentalDecorators": true,        /* Enables experimental support for ES7 decorators. */
       // "emitDecoratorMetadata": true,         /* Enables experimental support for emitting type metadata for decorators. */
     },
-    "include": [
-      "src/*"
-    ],
+    "include": ["src/components", "public/custom.d.ts"],
     "exclude": [
       "tests/*"
     ]
