--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "@types/jest": "^29.5.1",
     "@types/lodash": "^4.14.194",
     "@types/node": "^20.1.0",
+    "@types/node-sass": "^4.11.3",
     "@types/react": "^18.2.5",
     "@types/react-dom": "^18.2.4",
     "lodash": "^4.17.21",
+    "node-sass": "^8.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
